WebAPI core tests has been initialized

--- a/src/WebAPI/INeedAHero4Ed.Core/INeedAHero4Ed.Core.csproj
+++ b/src/WebAPI/INeedAHero4Ed.Core/INeedAHero4Ed.Core.csproj
@@ -9,6 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Domain\Exceptions" />
       <Folder Include="Domain\Identity" />
     </ItemGroup>
 
